<resources>
    <string name="app_name">VeePy</string>

    <string name="john_doe">John Doe</string>
    <string name="empty_list">No items in the list</string>
    <string name="error_list">Something went wrong</string>

    <!--Login activity strings-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_signIn">Sign In</string>
    <string name="login_register">Join now</string>
    <string name="login_forgot_pass">Forgot Password</string>
    <string name="login_resend_verification_email">Resend Verification Email</string>

    <!--Register activity strings-->
    <string name="register_registerName">Registration</string>
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_orgName">Organization Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_txt">Register</string>

    <!--EventDetail activity strings-->
    <string name="activity_event_detail_name">Name</string>
    <string name="activity_event_detail_location">Location</string>
    <string name="activity_event_detail_eventType">Event type</string>
    <string name="activity_event_detail_schedule">Schedule</string>
    <string name="activity_event_detail_members">Members</string>
    <string name="activity_event_detail_create">Create event</string>
    <string name="activity_event_detail">Event detail</string>

    <!--MemberDetail activity strings-->
    <string name="activity_member_detail_create">Add member</string>
    <string name="activity_member_detail_update">Update member</string>
    <string name="activity_member_detail">Member detail</string>
    <string name="activity_member_detail_name">Name</string>
    <string name="activity_member_detail_email">Email</string>
    <string name="activity_member_detail_phone">Phone</string>

    <!--MemberListFragment strings-->
    <string name="fragment_member_item_subtitle">Work contact </string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>

    <!--CalendarFragment strings-->
    <string name="calendar_dialog_edit">Add new event</string>
    <string name="calendar_dialog_show">Show events</string>

    <!--Error strings-->
    <string name="ERROR_WEAK_PASSWORD">The password is invalid it must 6 characters at least</string>
    <string name="ERROR_EMPTY_FIELD">This field must not be empty</string>
    <string name="ERROR_TO_SHORT_FIELD">This field must contain at least 5 characters. Ex: a@b.c</string>
    <string name="ERROR_BAD_FORMAT">Format is invalid</string>
    <string name="ERROR_MATCHING">Passwords do not match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
