<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/activity_register_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:textSize="@dimen/text_input"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/activity_register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:textSize="@dimen/text_input"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/activity_register_et_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirm_password"
            android:textSize="@dimen/text_input"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/activity_register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_txt"
            android:background="@color/light_blue_600"/>

    </LinearLayout>

</RelativeLayout>