<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/activity_login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:hint="@string/login_email"
                android:textColor="@color/lightBlue"/>

            <EditText
                android:id="@+id/activity_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <Button
                android:id="@+id/activity_login_btn_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_signIn"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/light_blue_600"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/lightBlue"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_pass"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/lightBlue"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_resend_verification_email"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/lightBlue"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>