<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />


        <variable
            name="model"
            type="com.example.andre.verifypresency.viewmodel.RegisterViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorInput="@{model.registerForm.firstNameError}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_register_et_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:enabled="@{model.enableView}"
                        android:hint="@string/register_firstName"
                        android:singleLine="true"
                        android:text="@={model.registerForm.registerField.firstName}"
                        android:textSize="@dimen/text_input"
                        bind:onFocus="@{model.onFocusFirstName}" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorInput="@{model.registerForm.lastNameError}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_register_et_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:enabled="@{model.enableView}"
                        android:hint="@string/register_lastName"
                        android:singleLine="true"
                        android:text="@={model.registerForm.registerField.lastName}"
                        android:textSize="@dimen/text_input"
                        bind:onFocus="@{model.onFocusLastName}" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorInput="@{model.registerForm.orgNameError}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_register_et_orgName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:enabled="@{model.enableView}"
                        android:hint="@string/register_orgName"
                        android:singleLine="true"
                        android:text="@={model.registerForm.registerField.orgName}"
                        android:textSize="@dimen/text_input"
                        bind:onFocus="@{model.onFocusOrgName}" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorInput="@{model.registerForm.emailError}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_register_et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:enabled="@{model.enableView}"
                        android:hint="@string/register_email"
                        android:inputType="textNoSuggestions|textEmailAddress"
                        android:singleLine="true"
                        android:text="@={model.registerForm.registerField.email}"
                        android:textSize="@dimen/text_input"
                        bind:onFocus="@{model.onFocusEmail}" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorInput="@{model.registerForm.passwordError}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_register_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:enabled="@{model.enableView}"
                        android:hint="@string/register_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={model.registerForm.registerField.password}"
                        android:textSize="@dimen/text_input"
                        bind:onFocus="@{model.onFocusPassword}" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorInput="@{model.registerForm.confirmPasswordError}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_register_et_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:enabled="@{model.enableView}"
                        android:hint="@string/register_confirm_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={model.registerForm.registerField.confirmPassword}"
                        android:textSize="@dimen/text_input"
                        bind:onFocus="@{model.onFocusConfirm}" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <include
            layout="@layout/layout_progressbar"
            android:visibility="@{model.dataLoading ? View.VISIBLE : View.INVISIBLE  }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/fragment_register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/light_blue_600"
            android:enabled="@{model.registerForm.valid}"
            android:onClick="@{() -> model.onButtonClick()}"
            android:text="@string/register_txt"
            android:textAllCaps="false"
            android:textColor="@color/whiteTxtColor"
            app:layout_constraintTop_toBottomOf="@+id/scrollview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</layout>
