<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.example.andre.verifypresency.login.LoginViewModel" />

        <variable
            name="appModule"
            type="com.example.andre.verifypresency.AppModuleEnum" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/fragment_login_iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/ic_login" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorInput="@{model.loginForm.emailError}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_login_et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:enabled="@{!model.dataLoading}"
                        android:hint="@string/login_email"
                        android:singleLine="true"
                        android:text="@={model.loginForm.loginField.email}"
                        android:textSize="@dimen/text_input"
                        bind:onFocus="@{model.onFocusEmail}" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorInput="@{model.loginForm.passwordError}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_login_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:enabled="@{!model.dataLoading}"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={model.loginForm.loginField.password}"
                        android:textSize="@dimen/text_input"
                        bind:onFocus="@{model.onFocusPassword}" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include
                layout="@layout/layout_progressbar"
                android:visibility="@{model.dataLoading ? View.VISIBLE : View.INVISIBLE  }" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/fragment_login_btn_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/light_blue_600"
                android:enabled="@{model.loginForm.valid}"
                android:onClick="@{()->model.onButtonClicked(appModule.LOGIN)}"
                android:text="@string/login_signIn"
                android:textAllCaps="false"
                android:textColor="@color/whiteTxtColor" />

            <Button
                android:id="@+id/fragment_login_tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/transparent"
                android:enabled="@{model.dataLoading ? false : true}"
                android:onClick="@{()->model.onButtonClicked(appModule.REGISTER)}"
                android:text="@string/login_register"
                android:textAllCaps="false"
                android:textColor="@color/lightBlue"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</layout>