<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.example.andre.verifypresency.memberdetail.MemberDetailViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Top toolbar-->
        <FrameLayout
            android:id="@+id/activity_member_detail_rl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/snippet_top_detailbar" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_member_detail_rl_top"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_padding"
            android:paddingEnd="@dimen/activity_horizontal_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                bind:errorInput="@{model.memberForm.nameError}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_member_detail_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:enabled="@{model.dataLoading? false: true}"
                    android:focusable="@{model.onEdit ? false: true}"
                    android:hint="@string/activity_member_detail_name"
                    android:singleLine="true"
                    android:text="@={model.memberForm.memberField.name}"
                    android:textSize="@dimen/text_input"
                    bind:onFocus="@{model.onFocusName}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                bind:errorInput="@{model.memberForm.emailError}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_member_detail_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:enabled="@{model.dataLoading? false: true}"
                    android:hint="@string/activity_member_detail_email"
                    android:singleLine="true"
                    android:text="@={model.memberForm.memberField.email}"
                    android:textSize="@dimen/text_input"
                    bind:onFocus="@{model.onFocusEmail}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                bind:errorInput="@{model.memberForm.phoneNumberError}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_member_detail_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:enabled="@{model.dataLoading? false: true}"
                    android:hint="@string/activity_member_detail_phone"
                    android:singleLine="true"
                    android:text="@={model.memberForm.memberField.phone}"
                    android:textSize="@dimen/text_input"
                    bind:onFocus="@{model.onFocusPhoneNumber}" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <include
            layout="@layout/layout_progressbar"
            android:visibility="@{model.dataLoading ? View.VISIBLE:View.GONE}" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/activity_member_detail_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:enabled="@{model.dataLoading? false: true}"
            android:onClick="@{() -> model.onButtonClick()}"
            android:src="@drawable/ic_check_white_24dp"
            android:visibility="@{model.fabVisibilityView ? View.VISIBLE : View.INVISIBLE  }"
            fab:fab_colorNormal="@color/colorPrimaryLight"
            fab:fab_colorPressed="@color/accent"
            fab:fab_colorRipple="@color/colorPrimaryDark"
            fab:fab_label="Save"
            fab:fab_size="normal"
            fab:paddingEnd="2dp"
            fab:paddingStart="2dp" />

    </RelativeLayout>

</layout>